k8s/namespace-user.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-namespace
  labels:
    istio-injection: enabled
