k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-gateway
  namespace: user-namespace
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
      # - app-dev.something.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-virtual-service
  namespace: user-namespace
spec:
  hosts:
    # app-dev.something.com
    - user-service
  gateways:
    - user-gateway
  http:
    - route:
      - destination:
          host: user-service
          subset: v1
          # port:
          #   number: 8000
        weight: 50
      - destination:
          host: user-service
          subset: v2
          # port:
          #   number: 8000
        weight: 50
